--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -154,6 +154,7 @@
         <ClInclude Include="..\..\main\capture\encoders\FFmpegEncoder.h"/>
         <ClInclude Include="..\..\main\capture\EncodingManager.h"/>
         <ClInclude Include="..\..\main\capture\Resampler.h"/>
+        <ClInclude Include="..\..\main\win\features\Cheats.h" />
         <ClInclude Include="..\..\main\win\features\ConfigDialog.h" />
         <ClInclude Include="..\..\main\win\features\CrashHelper.h"/>
         <ClInclude Include="..\..\main\win\features\CoreDbg.h"/>
@@ -219,6 +220,7 @@
         <ClCompile Include="..\..\main\capture\encoders\FFmpegEncoder.cpp"/>
         <ClCompile Include="..\..\main\capture\EncodingManager.cpp"/>
         <ClCompile Include="..\..\main\capture\Resampler.cpp"/>
+        <ClCompile Include="..\..\main\win\features\Cheats.cpp" />
         <ClCompile Include="..\..\main\win\features\ConfigDialog.cpp" />
         <ClCompile Include="..\..\main\win\features\CrashHelper.cpp"/>
         <ClCompile Include="..\..\main\win\features\CoreDbg.cpp"/>
