--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -671,9 +671,11 @@ CAPTION "Cheats"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LISTBOX         IDC_LIST_CHEATS,7,7,257,119,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_EDIT_CHEAT,7,141,257,83,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | ES_READONLY
-    CONTROL         "Enabled",IDC_CHECK_CHEAT_ENABLED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,59,126,93,14
-    PUSHBUTTON      "New",IDC_NEW_CHEAT,7,126,50,14
+    EDITTEXT        IDC_EDIT_CHEAT,7,141,257,67,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+    CONTROL         "Enabled",IDC_CHECK_CHEAT_ENABLED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,126,38,14
+    PUSHBUTTON      "+",IDC_NEW_CHEAT,7,126,19,14
+    PUSHBUTTON      "Apply",IDC_CHEAT_APPLY,214,126,50,14
+    EDITTEXT        IDC_EDIT_CHEAT_NAME,29,126,141,14,ES_AUTOHSCROLL
 END
 
 
