--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -641,7 +641,7 @@ CAPTION "Run"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,274,155,50,14
-    PUSHBUTTON      "Abbrechen",IDCANCEL,220,155,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,220,155,50,14
     LISTBOX         IDC_LIST_ROMS,7,17,103,134,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LISTBOX         IDC_LIST_MOVIES,114,17,103,134,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LISTBOX         IDC_LIST_SCRIPTS,221,17,103,134,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
